replaced deprecated newinstance method with correct one